--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21"
   }
